OWL-5042 Forums: Fixed a spacing issue for badges on dfAllMessages

--- a/msgcntr/messageforums-app/src/webapp/css/msgcntr.css
+++ b/msgcntr/messageforums-app/src/webapp/css/msgcntr.css
@@ -937,6 +937,11 @@ div.msgcntr-profile-qtip {
 	font-weight: bold;
 	white-space: nowrap;
 }
+.messageNew + .messageDenied,
+.messageNew + .messagePending {
+	/* space out the labels when they come after the New badge */
+	margin-left: 4px;
+}
 .badge-draft {
 	background-color: #f8deae;
 }
